--- a/_tweets-md/2015/2015-05-01-tweets.md
+++ b/_tweets-md/2015/2015-05-01-tweets.md
@@ -1,25 +1,31 @@
+---    
+title: "Social Media - May"
+date: "2015-05-31"
+time: 23:59:59 +0000
+---
+
 > Working on a hack using #bitcoin for revokable self-signed TLS certificates, for next week's presentation at @blockchainU — interested?
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 09 16:45:17 +0000 2015](https://twitter.com/ChristopherA/status/597079905327652864)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 09 16:45:17 +0000 2015](https://twitter.com/ChristopherA/status/597079905327652864)
 
 ----
 
 > RT @blockchainU: Design Thinking session @ideo  
 > @manjuchintamani @iamawesomedave @SwimSafely1 @ChristianPeel @xbtme @ChristopherA [http://t.c…](http://t.c…)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 09 17:07:47 +0000 2015](https://twitter.com/ChristopherA/status/597085569189945344)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 09 17:07:47 +0000 2015](https://twitter.com/ChristopherA/status/597085569189945344)
 
 ----
 
 > My proposal for a @BlockchainU hack to demonstrate using #bitcoin to revoke self-signed TLS certificates is up at [https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack](https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 09 17:24:41 +0000 2015](https://twitter.com/ChristopherA/status/597089823443169281)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 09 17:24:41 +0000 2015](https://twitter.com/ChristopherA/status/597089823443169281)
 
 ----
 
 > RT @blockchainU: .@ChristopherA filling in some blanks about elliptic curve history, the NSA, RSA, [http://certicom.com/ecc](http://certicom.com/ecc) cryp.to etc. http…
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 09 18:47:46 +0000 2015](https://twitter.com/ChristopherA/status/597110729704017922)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 09 18:47:46 +0000 2015](https://twitter.com/ChristopherA/status/597110729704017922)
 
 ----
 
@@ -27,19 +33,19 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/597094468995579904
 
 > glad to, links?
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 09 18:48:39 +0000 2015](https://twitter.com/ChristopherA/status/597110953386184704)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 09 18:48:39 +0000 2015](https://twitter.com/ChristopherA/status/597110953386184704)
 
 ----
 
 > .@benlawsky How to Prevent #NY from becoming the #Bitcoin Backwater of the US [http://brianfor.de/1J9Iel9](http://brianfor.de/1J9Iel9) via @BrianForde
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 13 14:47:11 +0000 2015](https://twitter.com/ChristopherA/status/598499735230525440)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 13 14:47:11 +0000 2015](https://twitter.com/ChristopherA/status/598499735230525440)
 
 ----
 
 > RT @dom: Read 5 Reasons “Why You May Need Apple Watch”. [http://j.mp/NeedWatch](http://j.mp/NeedWatch) // cc @gruber @daringfireball #iosdevcamp
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 13 14:48:23 +0000 2015](https://twitter.com/ChristopherA/status/598500038780682240)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 13 14:48:23 +0000 2015](https://twitter.com/ChristopherA/status/598500038780682240)
 
 ----
 
@@ -47,84 +53,84 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/597094468995579904
 > [http://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack](http://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack)  
 > @ChristopherA @matthewjosef @jarodholtz http…
 
-<img src="../../media/tweet.ico" width="12" /> [Sun May 17 06:02:09 +0000 2015](https://twitter.com/ChristopherA/status/599817160995639296)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 17 06:02:09 +0000 2015](https://twitter.com/ChristopherA/status/599817160995639296)
 
 ----
 
 > RT @martindale: Revocable self-signed SSL certificates based on bitcoin, from the creator of SSLv3 and TLS @ChristopherA #BlockchainU http:…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 19 03:56:28 +0000 2015](https://twitter.com/ChristopherA/status/600510305832013824)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 19 03:56:28 +0000 2015](https://twitter.com/ChristopherA/status/600510305832013824)
 
 ----
 
 > RT @ofnumbers: .@ChristopherA and team demoing RevokeSSL: SSL Certificate Revocation @blockchainU -- can revoke with BTC transaction http:/…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 19 03:57:37 +0000 2015](https://twitter.com/ChristopherA/status/600510597172568064)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 19 03:57:37 +0000 2015](https://twitter.com/ChristopherA/status/600510597172568064)
 
 ----
 
 > RT @NickSzabo4: Diversity and mutual independence of full nodes help make Bitcoin more reliable and secure [https://getaddr.bitnodes.io/](https://getaddr.bitnodes.io/) [http://t…](http://t…)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 19 23:12:23 +0000 2015](https://twitter.com/ChristopherA/status/600801201140072449)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 19 23:12:23 +0000 2015](https://twitter.com/ChristopherA/status/600801201140072449)
 
 ----
 
 > Bitnodes reports 6858 #bitcoin nodes are active. Great redundancy for verifying revocable #TLS self-signed certs: [https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack](https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 19 23:16:21 +0000 2015](https://twitter.com/ChristopherA/status/600802202072944640)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 19 23:16:21 +0000 2015](https://twitter.com/ChristopherA/status/600802202072944640)
 
 ----
 
 > I'm pleased to see some discussion on Reddit about my revokable #TLS self-signed certificates hack using #blockchain: [http://www.reddit.com/r/Bitcoin/comments/36mhs1/revocable_selfsigned_tls_certificates_using_the/](http://www.reddit.com/r/Bitcoin/comments/36mhs1/revocable_selfsigned_tls_certificates_using_the/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 20 17:02:45 +0000 2015](https://twitter.com/ChristopherA/status/601070568327122945)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 20 17:02:45 +0000 2015](https://twitter.com/ChristopherA/status/601070568327122945)
 
 ----
 
 > "The most polished project in the cohort, RevokeSSL succeeded by demoing strong knowledge of a niche market"@coindesk [http://www.coindesk.com/founding-ssl-developer-unveils-project-at-blockchain-university/](http://www.coindesk.com/founding-ssl-developer-unveils-project-at-blockchain-university/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 20 23:29:10 +0000 2015](https://twitter.com/ChristopherA/status/601167811633926144)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 20 23:29:10 +0000 2015](https://twitter.com/ChristopherA/status/601167811633926144)
 
 ----
 
 > RT @blockchainU: @ChristopherA @matthewjosef @jarodholtz at Cohort #2 Demo Night #bcudemos 
 > 
-> ![](../../media/601188572503257091-CFdsaORUIAEXkDL.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/601188572503257091-CFdsaORUIAEXkDL.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 21 00:51:39 +0000 2015](https://twitter.com/ChristopherA/status/601188572503257091)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 21 00:51:39 +0000 2015](https://twitter.com/ChristopherA/status/601188572503257091)
 
 ----
 
 > RT @blockchainU: Project by @ChristopherA (SSL protocol co-author) @matthewjosef @jarodholtz [https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack/blob/master/README.md](https://github.com/ChristopherA/revocable-self-signed-tls-certificates-hack/blob/master/README.md) [https://twitter.com/RedditBTC/status/601035648229888000](https://twitter.com/RedditBTC/status/601035648229888000)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 21 00:51:44 +0000 2015](https://twitter.com/ChristopherA/status/601188593567027200)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 21 00:51:44 +0000 2015](https://twitter.com/ChristopherA/status/601188593567027200)
 
 ----
 
 > I am speaking next Monday at the SF Bitcoin Devs Meetup on the topic of Revocable Certificates using the #Blockchain [http://www.meetup.com/SF-Bitcoin-Devs/events/222712738/](http://www.meetup.com/SF-Bitcoin-Devs/events/222712738/)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 28 21:14:06 +0000 2015](https://twitter.com/ChristopherA/status/604032926754328576)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 28 21:14:06 +0000 2015](https://twitter.com/ChristopherA/status/604032926754328576)
 
 ----
 
 > RT @JeffreyCarlson: A great categorization of privacy into four categories. - “The Four Kinds of Privacy” by @ChristopherA [https://t.co/YjO…](https://t.co/YjO…)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 28 22:24:20 +0000 2015](https://twitter.com/ChristopherA/status/604050601064824832)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 28 22:24:20 +0000 2015](https://twitter.com/ChristopherA/status/604050601064824832)
 
 ----
 
 > .@NickSzabo4 conceived cryptographic smart contracts used by #bitcoin, but there is more to it than just #blockchain [https://twitter.com/NickSzabo4/status/604034477006823424](https://twitter.com/NickSzabo4/status/604034477006823424)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 28 23:19:14 +0000 2015](https://twitter.com/ChristopherA/status/604064414828908544)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 28 23:19:14 +0000 2015](https://twitter.com/ChristopherA/status/604064414828908544)
 
 ----
 
 > I just ran into @NickSzabo4's editorial on "small-game fallacies", aka micro-economics do not scale to larger groups: [http://unenumerated.blogspot.com/2015/05/small-game-fallacies.html](http://unenumerated.blogspot.com/2015/05/small-game-fallacies.html)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 28 23:51:20 +0000 2015](https://twitter.com/ChristopherA/status/604072493884682240)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 28 23:51:20 +0000 2015](https://twitter.com/ChristopherA/status/604072493884682240)
 
 ----
 
 > I ❤ postmortems—there are many parts of this story that resonate with me in my own experience in doing mobile games: [http://gamasutra.com/blogs/AdriaanDeJongh/20150527/244437/Closing_Game_Oven_numbers_and_struggles.php](http://gamasutra.com/blogs/AdriaanDeJongh/20150527/244437/Closing_Game_Oven_numbers_and_struggles.php)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat May 30 01:35:17 +0000 2015](https://twitter.com/ChristopherA/status/604461043025199104)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 30 01:35:17 +0000 2015](https://twitter.com/ChristopherA/status/604461043025199104)
