--- a/_tweets-md/2015/2015-01-01-tweets.md
+++ b/_tweets-md/2015/2015-01-01-tweets.md
@@ -1,36 +1,42 @@
+---    
+title: "Social Media - January"
+date: "2015-01-31"
+time: 23:59:59 +0000
+---
+
 > RT @casademora: Woot, the best iOS hackathon in Silicon Valley. @iosdevcamp is happening again in July! I’ll be there! [http://t.co/YM0WgGI1…](http://t.co/YM0WgGI1…)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 24 08:26:03 +0000 2015](https://twitter.com/ChristopherA/status/558903542723776512)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 24 08:26:03 +0000 2015](https://twitter.com/ChristopherA/status/558903542723776512)
 
 ----
 
 > Prediction—In 20 years we may forget Bitcoin, but we will remember the birth of Distributed Autonomous Corporations: [http://zite.to/1zllThN](http://zite.to/1zllThN)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jan 27 22:57:57 +0000 2015](https://twitter.com/ChristopherA/status/560210130008932352)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 27 22:57:57 +0000 2015](https://twitter.com/ChristopherA/status/560210130008932352)
 
 ----
 
 > RT @Blackphone_ch: The biggest risk to you &amp; your company’s privacy is your smartphone. Get the facts here: [http://bit.ly/privacyprojectvideo](http://bit.ly/privacyprojectvideo) #privacy…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 28 17:58:00 +0000 2015](https://twitter.com/ChristopherA/status/560497030011686913)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 28 17:58:00 +0000 2015](https://twitter.com/ChristopherA/status/560497030011686913)
 
 ----
 
 > RT @_emschwartz: Video: @SilentCircle + @Blackphone_ch getting people to read their apps' T&amp;Cs: [http://youtu.be/ZcjtEKNP05c](http://youtu.be/ZcjtEKNP05c) #PrivacyProject http…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jan 28 17:59:35 +0000 2015](https://twitter.com/ChristopherA/status/560497428600586240)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 28 17:59:35 +0000 2015](https://twitter.com/ChristopherA/status/560497428600586240)
 
 ----
 
 > RT @mdowd: Blackphone worked with me on the disclosure of this, and did a good job getting out a fix. Make sure you're patched up to most r…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jan 29 22:26:47 +0000 2015](https://twitter.com/ChristopherA/status/560927062391652352)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 29 22:26:47 +0000 2015](https://twitter.com/ChristopherA/status/560927062391652352)
 
 ----
 
 > I like open-plan office designs, but I agree with many of its critics. One success story by The Bridgespan Group: [http://www.livelywork.com/an-open-plan-office-at-bridgespan-group/](http://www.livelywork.com/an-open-plan-office-at-bridgespan-group/)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 31 06:32:43 +0000 2015](https://twitter.com/ChristopherA/status/561411738361270272)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 31 06:32:43 +0000 2015](https://twitter.com/ChristopherA/status/561411738361270272)
 
 ----
 
@@ -38,4 +44,4 @@ Replying to [@berkun](https://twitter.com/berkun/status/561413429618282496)
 
 > I agree re: office design for creativity alone. But it is powerful tool for culture and community, and that can empower creativity.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jan 31 06:44:21 +0000 2015](https://twitter.com/ChristopherA/status/561414665322778626)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 31 06:44:21 +0000 2015](https://twitter.com/ChristopherA/status/561414665322778626)
