--- a/_tweets-md/2015/2015-02-01-tweets.md
+++ b/_tweets-md/2015/2015-02-01-tweets.md
@@ -1,21 +1,27 @@
+---    
+title: "Social Media - February"
+date: "2016-02-28"
+time:  23:59:59 +0000
+---
+
 > RT @Blackphone_ch: Silent Store Participation. A Call to App Developers: [http://bit.ly/19fw2B3](http://bit.ly/19fw2B3)  #Blackphone @SilentCircle #SilentStore
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Feb 14 21:49:26 +0000 2015](https://twitter.com/ChristopherA/status/566715868151701504)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 14 21:49:26 +0000 2015](https://twitter.com/ChristopherA/status/566715868151701504)
 
 ----
 
 > RT @SilentCircle: #SilentCircle Consolidates Leadership Position In The Mobile Enterprise Market - [http://prn.to/1vCzaRB](http://prn.to/1vCzaRB)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Feb 26 21:03:33 +0000 2015](https://twitter.com/ChristopherA/status/571052975671496704)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 26 21:03:33 +0000 2015](https://twitter.com/ChristopherA/status/571052975671496704)
 
 ----
 
 > RT @Blackphone_ch: "With $50M Boost, Silent Circle Aims #Blackphone At Enterprise #Security" - [http://tcrn.ch/1Fywvs1](http://tcrn.ch/1Fywvs1)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Feb 26 21:04:07 +0000 2015](https://twitter.com/ChristopherA/status/571053118718214145)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 26 21:04:07 +0000 2015](https://twitter.com/ChristopherA/status/571053118718214145)
 
 ----
 
 > RT @TechCrunch: Silent Circle Buys Geeksphone Out Of Blackphone Joint-Venture [http://tcrn.ch/1zKOyHQ](http://tcrn.ch/1zKOyHQ) by @riptari
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Feb 26 21:04:21 +0000 2015](https://twitter.com/ChristopherA/status/571053175064498176)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 26 21:04:21 +0000 2015](https://twitter.com/ChristopherA/status/571053175064498176)
