2022 title: Socila Media

--- a/_tweets-md/2022/2022-01-01-tweets.md
+++ b/_tweets-md/2022/2022-01-01-tweets.md
@@ -1,6 +1,7 @@
 ---    
+title: "Social Media - January"
 date: "2022-01-31"
-time:  23:59:59 +0000
+time: 23:59:59 +0000
 ---
 > I'm still thinking about this a year later. I'm not sure oracle is the right word — I guess what I'm seeking is closer to the concept of a Fair Witness (from Heinlein's SiaSL), someone specifically trained to offer evidence based on non-subjective observations, without deduction. [https://twitter.com/ChristopherA/status/1080723865972535296](https://twitter.com/ChristopherA/status/1080723865972535296)
 
